--- a/registration.html
+++ b/registration.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="registration.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="registration.css" />
     <title>Registration page</title>
-</head>
-<body>    
-   <div class="container">
-    <form method="" action="log_data.php">
+  </head>
+  <body>
+    <div class="container">
+      <form method="post" action="login_new.php">
         <h1>Registration Form</h1>
         <label for="name">User name:</label>
-        <input type="text" id="name" name="username">
-        <br>
+        <input type="text" id="name" name="username" />
+        <br />
         <label for="password">Password:</label>
-        <input type="password" id="password" name="pwd">
-        <br>
+        <input type="password" id="password" name="pwd" />
+        <br />
         <label for="password">Enter password again:</label>
-        <input type="password" id="password" name="pwd">
-        <br>
+        <input type="password" id="password" name="pwd" />
+        <br />
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email">
-        <br>
+        <input type="email" id="email" name="email" />
+        <br />
         <label for="gender">Gender:</label>
         <!-- <span> </span> -->
-        <input type="radio" id="male" name="gender" value="male"> Male:
-        <input type="radio" id="female" name="gender" value="female"> Female: 
+        <div class="gender">
+          <input type="radio" id="male" name="gender" value="male" /> Male
+          <input type="radio" id="female" name="gender" value="female" /> Female
+        </div>
         <label for="phoneNo">Phone No:</label>
-        <input type="number" id="phoneNo" name="phoneNo"> 
-        <br>
+        <input type="number" id="phoneNo" name="phoneNo" />
+        <br />
         <label for="address">Address:</label>
         <textarea name="address" id="address" cols="30" rows="10"></textarea>
-        <br>   
-        <input type="submit" value="Submit">
-    </form>
-   </div>
-</body>
+        <br />
+        <input type="submit" value="Submit" />
+      </form>
+    </div>
+  </body>
 </html>
