--- a/login.html
+++ b/login.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="login.css" />
     <title>Login page</title>
-</head>
-<body>
-    <form method="" action="log_data.php">
-        <h1>Login credentials</h1>
-        <label for="name">User name:</label>
-        <input type="text" id="name" name="username">
-        <br>
-        <label for="password">Password :</label>
-        <input type="password" id="password" name="pwd">
-        <br>
-        <input type="submit" value="Submit">
+  </head>
+  <body>
+    <form method="get" action="log_data.php">
+      <h1>Login credentials</h1>
+      <label for="name">User name:</label>
+      <input type="text" id="name" name="name" />
+      <br />
+      <label for="password">Password :</label>
+      <input type="password" id="password" name="password" />
+      <br />
+      <input type="submit" value="Submit" />
     </form>
-</body>
+  </body>
 </html>
