--- a/registration.html
+++ b/registration.html
@@ -8,34 +8,18 @@
   </head>
   <body>
     <div class="container">
-      <form method="post" action="login_new.php">
+      <form method="get" action="login_new.php">
         <h1>Registration Form</h1>
         <label for="name">User name:</label>
-        <input type="text" id="name" name="username" />
+        <input type="text" id="name" name="Username" />
         <br />
         <label for="password">Password:</label>
-        <input type="password" id="password" name="pwd" />
-        <br />
-        <label for="password">Enter password again:</label>
-        <input type="password" id="password" name="pwd" />
-        <br />
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" />
-        <br />
-        <label for="gender">Gender:</label>
-        <!-- <span> </span> -->
-        <div class="gender">
-          <input type="radio" id="male" name="gender" value="male" /> Male
-          <input type="radio" id="female" name="gender" value="female" /> Female
-        </div>
-        <label for="phoneNo">Phone No:</label>
-        <input type="number" id="phoneNo" name="phoneNo" />
-        <br />
-        <label for="address">Address:</label>
-        <textarea name="address" id="address" cols="30" rows="10"></textarea>
+        <input type="password" id="password" name="Password" />
         <br />
         <input type="submit" value="Submit" />
       </form>
     </div>
   </body>
 </html>
+
+
